# oceantide

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_docs.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: atlas_to_oceantide.ipynb  predict.ipynb
oceantide/: __init__.py  cli.py  constituents.py  core.py  ellipse.py  tide.py
oceantide/core/: attributes.yml  otis.py  utils.py
oceantide/input/: __init__.py  dataset.py  oceantide.py  otis.py  otis_atlas_netcdf.py  otis_binary.py  otis_merged.py  otis_netcdf.py
oceantide/output/: oceantide.py  otis.py  otis_binary.py  otis_netcdf.py
ontide/: __init__.py  cli.py  constituents.py  core.py  ellipse.py  otis.py  otisoo.py  predict.py  remap.py
tests/: test_cli.py  test_io.py  test_otis.py  test_tide.py
tests/test_files/: oceantide.nc  otis_merged.nc  otis_merged_tide_timeseries_hourly_2001-01-01T00z_2001-01-01T06z.nc
tests/test_files/dataset.zarr/: .zattrs  .zmetadata
tests/test_files/dataset.zarr/con/: .zattrs  0
tests/test_files/dataset.zarr/dep/: .zarray  .zattrs
tests/test_files/dataset.zarr/h/: .zarray
tests/test_files/dataset.zarr/lat/: .zattrs
tests/test_files/dataset.zarr/lon/: .zattrs
tests/test_files/dataset.zarr/u/: 0.0.0
tests/test_files/dataset.zarr/v/: .zattrs  0.0.0
tests/test_files/oceantide.zarr/: .zmetadata
tests/test_files/oceantide.zarr/dep/: .zarray  0.0
tests/test_files/oceantide.zarr/depth/: 0.0
tests/test_files/oceantide.zarr/et/: .zattrs  0.0.0
tests/test_files/oceantide.zarr/h_imag/: .zattrs  0.0.0
tests/test_files/oceantide.zarr/h_real/: .zarray  .zattrs  0.0.0
tests/test_files/oceantide.zarr/lat/: 0
tests/test_files/oceantide.zarr/lon/: 0
tests/test_files/oceantide.zarr/u_imag/: .zattrs  0.0.0
tests/test_files/oceantide.zarr/u_real/: .zattrs  0.0.0
tests/test_files/oceantide.zarr/ut/: .zattrs
tests/test_files/oceantide.zarr/v_imag/: .zattrs  0.0.0
tests/test_files/oceantide.zarr/v_real/: .zattrs  0.0.0
tests/test_files/otis_binary/: Model_rag  grid_rag  h_rag  u_rag
tests/test_files/otis_merged.zarr/: .zattrs  .zmetadata
tests/test_files/otis_merged.zarr/URe/: .zattrs  0.0.0
tests/test_files/otis_merged.zarr/VRe/: .zattrs
tests/test_files/otis_merged.zarr/con/: .zarray  .zattrs
tests/test_files/otis_merged.zarr/hIm/: .zattrs
tests/test_files/otis_merged.zarr/hRe/: .zattrs  0.0.0
tests/test_files/otis_merged.zarr/hu/: 0.0
tests/test_files/otis_merged.zarr/hv/: .zattrs
tests/test_files/otis_merged.zarr/lat_u/: .zattrs
tests/test_files/otis_merged.zarr/lat_v/: .zattrs
tests/test_files/otis_merged.zarr/lat_z/: .zattrs
tests/test_files/otis_merged.zarr/mu/: .zarray  0.0
tests/test_files/otis_merged.zarr/uIm/: .zattrs
tests/test_files/otis_merged.zarr/uRe/: 0.0.0
tests/test_files/otis_merged.zarr/vIm/: 0.0.0
tests/test_files/otis_netcdf/: Model_test  grid.test.nc  hf.test.nc  uv.test.nc
tests/test_files/test_cons_otis.zarr/UIm/: .zattrs  0.0.0
tests/test_files/test_cons_otis.zarr/VIm/: .zattrs  0.0.0
tests/test_files/test_cons_otis.zarr/con/: 0
tests/test_files/test_cons_otis.zarr/hIm/: 0.0.0
(+19 files in other folders)
