[tool.poetry]
name = "oceantide"
version = "0.3.0"
description = "Ocean tide prediction"
authors = ["Oceanum Developers <developers@oceanum.science>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.0.4"
dask = "^2022.3.0"
gcsfs = "^2022.2.0"
netCDF4 = "^1.5.8"
numpy = "^1.22.3"
scipy = "^1.8.0"
xarray = "^2022.3.0"
zarr = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
ipython = "^8.1.1"
tox = "^3.24.5"
autodoc = "^0.5.0"
Sphinx = "^4.4.0"
sphinx-gallery = "^0.10.1"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
